// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page with... Error message render correctly 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "someKey",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "someKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "someKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <HomePage
      error="Error message"
      fetchFilms={[Function]}
      films={Array []}
      loading={false}
      total={null}
    >
      <styled.div>
        <div
          className="nuu0b4-0 fQtrvV"
        >
          <ErrorMessage>
            <h1>
              Something went wrong...
            </h1>
          </ErrorMessage>
        </div>
      </styled.div>
    </HomePage>
  </Router>
</MemoryRouter>
`;

exports[`Home Page with... Films list render correctly 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "someKey",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "someKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "someKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <HomePage
      error={null}
      fetchFilms={[Function]}
      films={
        Array [
          Object {
            "filmId": "id1",
            "name": "name1",
          },
          Object {
            "filmId": "id2",
            "name": "name2",
          },
        ]
      }
      loading={false}
      total={null}
    >
      <styled.div>
        <div
          className="nuu0b4-0 fQtrvV"
        >
          <FilmsList
            films={
              Array [
                Object {
                  "filmId": "id1",
                  "name": "name1",
                },
                Object {
                  "filmId": "id2",
                  "name": "name2",
                },
              ]
            }
          >
            <styled.section>
              <section
                className="sc-1kmcr1y-0 llVoby"
              >
                <div
                  key="id1"
                  onClick={[Function]}
                >
                  <FilmsItem
                    name="name1"
                  >
                    <styled.div>
                      <div
                        className="sc-12vnwnp-0 jrQbdq"
                      >
                        <div>
                          <h3>
                            name1
                          </h3>
                          <Loader>
                            <styled.div>
                              <div
                                className="gk4wrh-0 kkGnRn"
                              >
                                <div
                                  className="lds-grid"
                                >
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                </div>
                              </div>
                            </styled.div>
                          </Loader>
                          <img
                            alt="name1"
                            onError={[Function]}
                            onLoad={[Function]}
                            src="test-file-stub"
                          />
                        </div>
                      </div>
                    </styled.div>
                  </FilmsItem>
                </div>
                <div
                  key="id2"
                  onClick={[Function]}
                >
                  <FilmsItem
                    name="name2"
                  >
                    <styled.div>
                      <div
                        className="sc-12vnwnp-0 jrQbdq"
                      >
                        <div>
                          <h3>
                            name2
                          </h3>
                          <Loader>
                            <styled.div>
                              <div
                                className="gk4wrh-0 kkGnRn"
                              >
                                <div
                                  className="lds-grid"
                                >
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                  <div />
                                </div>
                              </div>
                            </styled.div>
                          </Loader>
                          <img
                            alt="name2"
                            onError={[Function]}
                            onLoad={[Function]}
                            src="test-file-stub"
                          />
                        </div>
                      </div>
                    </styled.div>
                  </FilmsItem>
                </div>
              </section>
            </styled.section>
          </FilmsList>
        </div>
      </styled.div>
    </HomePage>
  </Router>
</MemoryRouter>
`;

exports[`Home Page with... Loader render correctly 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "someKey",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "someKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "someKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <HomePage
      error={null}
      fetchFilms={[Function]}
      films={Array []}
      loading={true}
      total={null}
    >
      <styled.div>
        <div
          className="nuu0b4-0 fQtrvV"
        >
          <Loader>
            <styled.div>
              <div
                className="gk4wrh-0 kkGnRn"
              >
                <div
                  className="lds-grid"
                >
                  <div />
                  <div />
                  <div />
                  <div />
                  <div />
                  <div />
                  <div />
                  <div />
                  <div />
                </div>
              </div>
            </styled.div>
          </Loader>
        </div>
      </styled.div>
    </HomePage>
  </Router>
</MemoryRouter>
`;

exports[`Home Page with... Pagination render correctly 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "someKey",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "someKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "someKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <HomePage
      error={null}
      fetchFilms={[Function]}
      films={Array []}
      loading={false}
      total={3}
    >
      <styled.div>
        <div
          className="nuu0b4-0 fQtrvV"
        >
          <FilmsList
            films={Array []}
          >
            <styled.section>
              <section
                className="sc-1kmcr1y-0 llVoby"
              />
            </styled.section>
          </FilmsList>
        </div>
      </styled.div>
      <Memo(Pagination)
        currentPage={1}
        limit={5}
        sort={1}
        total={3}
      >
        <styled.ul>
          <ul
            className="evds34-0 beHDyT"
          >
            <PaginationItem
              currentPage={1}
              key="1"
              page={1}
              querySettings="limit=5&sort=1"
            >
              <styled.li
                currentPage={1}
                page={1}
              >
                <li
                  className="sc-1rphps-0 gIYyTT"
                >
                  <Link
                    to="/?limit=5&sort=1&page=1"
                  >
                    <LinkAnchor
                      href="/?limit=5&sort=1&page=1"
                      navigate={[Function]}
                    >
                      <a
                        href="/?limit=5&sort=1&page=1"
                        onClick={[Function]}
                      >
                        1
                      </a>
                    </LinkAnchor>
                  </Link>
                </li>
              </styled.li>
            </PaginationItem>
          </ul>
        </styled.ul>
      </Memo(Pagination)>
    </HomePage>
  </Router>
</MemoryRouter>
`;
